force-app/main/default/objects/Account/fields/OM_VID_PaymentMethods__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_PaymentMethods__c</fullName>
    <label>Payment Methods</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Immediate payment without deduction</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Cash against documents</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Documentary remittance to 60 days against delivery</label>
            </value>
            <value>
                <fullName>AF00</fullName>
                <label>C. conf al contado</label>
            </value>
            <value>
                <fullName>AF15</fullName>
                <label>C. conf a 15 días</label>
            </value>
            <value>
                <fullName>AF30</fullName>
                <label>C. conf a 30 días</label>
            </value>
            <value>
                <fullName>AF35</fullName>
                <label>C. conf a 35 días</label>
            </value>
            <value>
                <fullName>AF3B</fullName>
                <label>C. conf a 30 días (20)</label>
            </value>
            <value>
                <fullName>AF3C</fullName>
                <label>C. conf a 30 días (15)</label>
            </value>
            <value>
                <fullName>AF4A</fullName>
                <label>C. conf a 45 días (30)</label>
            </value>
            <value>
                <fullName>AF4B</fullName>
                <label>C. conf a 45 días (10,25)</label>
            </value>
            <value>
                <fullName>AF5B</fullName>
                <label>C. conf a 55 días (30)</label>
            </value>
            <value>
                <fullName>AF60</fullName>
                <label>C. conf a 60 días</label>
            </value>
            <value>
                <fullName>AF6A</fullName>
                <label>C. conf a 60 días (1,15)</label>
            </value>
            <value>
                <fullName>AF6B</fullName>
                <label>C. conf a 60 días (15)</label>
            </value>
            <value>
                <fullName>AF6C</fullName>
                <label>C. conf a 60 días (15,30)</label>
            </value>
            <value>
                <fullName>AF6D</fullName>
                <label>C. conf a 60 días (25)</label>
            </value>
            <value>
                <fullName>AF6E</fullName>
                <label>C. conf a 60 días (10,20,30)</label>
            </value>
            <value>
                <fullName>AF6F</fullName>
                <label>C. conf a 60 días (10,25)</label>
            </value>
            <value>
                <fullName>AF6G</fullName>
                <label>C. conf a 60 días (10)</label>
            </value>
            <value>
                <fullName>AF6I</fullName>
                <label>C. conf a 65 días (25)</label>
            </value>
            <value>
                <fullName>AF6J</fullName>
                <label>C. conf a 60 días (12,27)</label>
            </value>
            <value>
                <fullName>AF6K</fullName>
                <label>C. conf a 60 días (12,26)</label>
            </value>
            <value>
                <fullName>AF6L</fullName>
                <label>C. conf a 60 días (20)</label>
            </value>
            <value>
                <fullName>AF6M</fullName>
                <label>C. conf a 60 días (5,20)</label>
            </value>
            <value>
                <fullName>AF6N</fullName>
                <label>Confirminf a 60 días, día fijo 30</label>
            </value>
            <value>
                <fullName>AF6O</fullName>
                <label>C. conf a 60 días (17)</label>
            </value>
            <value>
                <fullName>AF70</fullName>
                <label>C. conf a 70 días</label>
            </value>
            <value>
                <fullName>AF75</fullName>
                <label>C. conf a 75 días (5,15,25)</label>
            </value>
            <value>
                <fullName>AF7A</fullName>
                <label>C. conf a 75 días (5,20)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>