force-app/main/default/objects/Account/fields/OM_VID_Product2__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modelo</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>