force-app/main/default/objects/Account/fields/OM_VID_SalesOrganizations__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_SalesOrganizations__c</fullName>
    <label>Sales Organizations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VD10</fullName>
            </value>
            <value>
                <fullName>VD50</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>