force-app/main/default/objects/Account/fields/OM_VID_SyncStamp__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_SyncStamp__c</fullName>
    <label>Sync Stamp</label>
    <type>DateTime</type>
</CustomField>