force-app/main/default/objects/Account/fields/OM_VID_SyncStatus__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_SyncStatus__c</fullName>
    <label>Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sync</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>