force-app/main/default/objects/Account/fields/OM_VID_TotalFacturacion__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_TotalFacturacion__c</fullName>
    <label>Total facturación del año</label>
    <summarizedField>Actual_Sales_History__c.OM_VID_Revenue__c</summarizedField>
    <summaryFilterItems>
        <field>Actual_Sales_History__c.Sales_Organization__c</field>
        <operation>equals</operation>
        <value>VD10,VD50</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Actual_Sales_History__c.Year__c</field>
        <operation>equals</operation>
        <value>2025</value>
    </summaryFilterItems>
    <summaryForeignKey>Actual_Sales_History__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>