force-app/main/default/objects/Account/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <label>Organisation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Organisation_Name</valueSetName>
    </valueSet>
</CustomField>