force-app/main/default/objects/Account/fields/Parent_Current_Financial_Year_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Parent_Current_Financial_Year_Revenue__c</fullName>
    <inlineHelpText>This is the sum of all &apos;Current Financial Year Revenue&apos;s on Child Accounts associated to this account</inlineHelpText>
    <label>Parent Current Financial Year Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>