force-app/main/default/objects/Account/fields/Parent_Current_Financial_Year_Tons__c.field-meta.xml
<CustomField>
    <fullName>Parent_Current_Financial_Year_Tons__c</fullName>
    <description>This value will be rolled up by the DLRS form the Child Accounts</description>
    <inlineHelpText>This is the sum of all &apos;Current Financial Year Tons&apos;s on Child Accounts associated to this account</inlineHelpText>
    <label>Parent Current Financial Year Tons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>