force-app/main/default/objects/Account/fields/Parent_Total_Sales_History__c.field-meta.xml
<CustomField>
    <fullName>Parent_Total_Sales_History__c</fullName>
    <description>This is a value populated by the DLRS</description>
    <inlineHelpText>This is the sum of all &apos;Total Sales History&apos;s on Child Accounts associated to this account</inlineHelpText>
    <label>Parent Total Sales History</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>