force-app/main/default/objects/Account/fields/PGT_Current_Financial_Year_Revenue__c.field-meta.xml
<CustomField>
    <fullName>PGT_Current_Financial_Year_Revenue__c</fullName>
    <inlineHelpText>This is the sum of all &apos;Grand Total Current Financial Year Reven&apos;s on Child Accounts associated to this account</inlineHelpText>
    <label>PGT Current Financial Year Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>