force-app/main/default/objects/Account/fields/PGT_Total_Sales_History__c.field-meta.xml
<CustomField>
    <fullName>PGT_Total_Sales_History__c</fullName>
    <inlineHelpText>This is the sum of all &apos;Grand Total Sales History&apos;s on Child Accounts associated to this account</inlineHelpText>
    <label>PGT Total Sales History</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>