force-app/main/default/objects/Account/fields/Platform_password__c.field-meta.xml
<CustomField>
    <fullName>Platform_password__c</fullName>
    <label>Platform password</label>
    <type>TextArea</type>
</CustomField>