force-app/main/default/objects/Account/fields/Previous_Company_Name_SAPID__c.field-meta.xml
<CustomField>
    <fullName>Previous_Company_Name_SAPID__c</fullName>
    <description>Flow to populate</description>
    <inlineHelpText>Automation populates this field</inlineHelpText>
    <label>Previous Company Name/SAPID</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>