force-app/main/default/objects/Account/fields/Primary_Haulier__c.field-meta.xml
<CustomField>
    <fullName>Primary_Haulier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Haulier</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria. Record Type - Haulier</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Haulier</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Primary Haulier)</relationshipLabel>
    <relationshipName>Account_Primary_Haulier</relationshipName>
    <type>Lookup</type>
</CustomField>