force-app/main/default/objects/Account/fields/PROVINCIA__c.field-meta.xml
<CustomField>
    <fullName>PROVINCIA__c</fullName>
    <description>PROVINCIA A LA QUE PERTENECE EL CLIENTE</description>
    <label>Province</label>
    <type>TextArea</type>
</CustomField>