force-app/main/default/objects/Account/fields/Provincia_f__c.field-meta.xml
<CustomField>
    <fullName>Provincia_f__c</fullName>
    <formula>BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Se completa automáticamente</inlineHelpText>
    <label>Provincia</label>
    <type>Text</type>
</CustomField>