force-app/main/default/objects/Account/fields/Recalculate_Apex_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Recalculate_Apex_Sharing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables a System Administrator to redo the Apex Sharing on Child Objects</description>
    <label>Recalculate Apex Sharing on Save</label>
    <type>Checkbox</type>
</CustomField>