force-app/main/default/objects/Account/fields/Sales_Admin__c.field-meta.xml
<CustomField>
    <fullName>Sales_Admin__c</fullName>
    <label>Sales Admin Pick</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Angela Boyle</fullName>
            </value>
            <value>
                <fullName>Celine Little</fullName>
            </value>
            <value>
                <fullName>Clare Sturdee</fullName>
            </value>
            <value>
                <fullName>Deborah Flynn</fullName>
            </value>
            <value>
                <fullName>Dylan Smith</fullName>
            </value>
            <value>
                <fullName>Elaine McGrath</fullName>
            </value>
            <value>
                <fullName>Emma McDermot</fullName>
            </value>
            <value>
                <fullName>Federica Masperi</fullName>
            </value>
            <value>
                <fullName>Ghenet Berhane</fullName>
            </value>
            <value>
                <fullName>Katrina Conlin</fullName>
            </value>
            <value>
                <fullName>Lisa Kelly</fullName>
            </value>
            <value>
                <fullName>Lynn McCann</fullName>
            </value>
            <value>
                <fullName>Meghan Mulligan</fullName>
            </value>
            <value>
                <fullName>Nicola Cassidy</fullName>
            </value>
            <value>
                <fullName>Nuala McManus</fullName>
            </value>
            <value>
                <fullName>Ronan Rehill</fullName>
            </value>
            <value>
                <fullName>Spain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>