force-app/main/default/objects/Account/fields/Sales_Admin_FL__c.field-meta.xml
<CustomField>
    <fullName>Sales_Admin_FL__c</fullName>
    <label>Sales Admin FL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shelley Stitson</fullName>
            </value>
            <value>
                <fullName>Sara Innes, Hayley and Faye CS7</fullName>
            </value>
            <value>
                <fullName>Hayley and Faye CS3</fullName>
            </value>
            <value>
                <fullName>Danielle Reed CS4</fullName>
            </value>
            <value>
                <fullName>Jacob Ainscough CS8</fullName>
            </value>
            <value>
                <fullName>Abigail Long</fullName>
            </value>
            <value>
                <fullName>Michelle Hardy CS6</fullName>
            </value>
            <value>
                <fullName>Sara Innes / Hayley and Faye CS9</fullName>
            </value>
            <value>
                <fullName>Kerry/ Tracey/ Emma CS5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>