force-app/main/default/objects/Account/fields/Sales_Admin_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Sales_Admin_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Admin</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>