force-app/main/default/objects/Account/fields/Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Office</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SalesOffices</relationshipName>
    <type>Lookup</type>
</CustomField>