force-app/main/default/objects/Account/fields/Sales_Office_IT__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office_IT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Office IT</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SalesITOffices</relationshipName>
    <type>Lookup</type>
</CustomField>