force-app/main/default/objects/Account/fields/Sales_Office_UK__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office_UK__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Office UK</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SalesUKOffices</relationshipName>
    <type>Lookup</type>
</CustomField>