force-app/main/default/objects/Account/fields/SAP_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Account_Number__c</fullName>
    <description>Account number from SAP</description>
    <externalId>true</externalId>
    <label>SAP Account Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>