force-app/main/default/objects/Account/fields/Secondary_Haulier__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Haulier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to Haulier Account</description>
    <label>Secondary Haulier</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria. Record Type = Haulier</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Haulier</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Secondary Haulier)</relationshipLabel>
    <relationshipName>Account_Secondary_Haulier</relationshipName>
    <type>Lookup</type>
</CustomField>