force-app/main/default/objects/Account/fields/Senior_Sales_Admin__c.field-meta.xml
<CustomField>
    <fullName>Senior_Sales_Admin__c</fullName>
    <label>Senior Sales Admin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Katrina Conlin</fullName>
            </value>
            <value>
                <fullName>Dylan Smith</fullName>
            </value>
            <value>
                <fullName>Elaine McGrath</fullName>
            </value>
            <value>
                <fullName>Vicky Craven</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>