force-app/main/default/objects/Account/fields/Senior_Sales_Admin_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Senior_Sales_Admin_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Senior Sales Admin</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>