force-app/main/default/objects/Account/fields/Senior_Sales_Office_FL__c.field-meta.xml
<CustomField>
    <fullName>Senior_Sales_Office_FL__c</fullName>
    <label>Senior Sales Office FL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Laura Pollinger</fullName>
            </value>
            <value>
                <fullName>Olivia Newell</fullName>
            </value>
            <value>
                <fullName>Michelle Turner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>