force-app/main/default/objects/Account/fields/Signed_T_C_s_Or_Contract_Attached__c.field-meta.xml
<CustomField>
    <fullName>Signed_T_C_s_Or_Contract_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed T&amp;C&apos;s or Contract Attached</label>
    <type>Checkbox</type>
</CustomField>