force-app/main/default/objects/Account/fields/Supplier_Share_Unidentified__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Share_Unidentified__c</fullName>
    <formula>Total_Purchase_Power__c -  Total_of_Supplier_Shares__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Share Unidentified</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>