force-app/main/default/objects/Account/fields/Supply_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Supply_Percentage__c</fullName>
    <formula>Total_Units_Won__c / Total_Glass_Requirement_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supply Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>