force-app/main/default/objects/Account/fields/Target_AQL__c.field-meta.xml
<CustomField>
    <fullName>Target_AQL__c</fullName>
    <label>Target AQL</label>
    <length>250</length>
    <type>Text</type>
</CustomField>