force-app/main/default/objects/Account/fields/Terms_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Terms_Conditions__c</fullName>
    <description>To show if Terms &amp; conditions have been signed or are not required</description>
    <inlineHelpText>Does this account have signed Terms &amp; conditions or are not they required</inlineHelpText>
    <label>Terms &amp; Conditions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>