force-app/main/default/objects/Account/fields/Tertiary_Haulier__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Haulier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tertiary Haulier</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria. Record Type = Haulier</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Haulier</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Tertiary Haulier)</relationshipLabel>
    <relationshipName>Accounts_Tertiary_Haulier</relationshipName>
    <type>Lookup</type>
</CustomField>