force-app/main/default/objects/Account/fields/Total_Glass_Requirement_Tonnage__c.field-meta.xml
<CustomField>
    <fullName>Total_Glass_Requirement_Tonnage__c</fullName>
    <label>Total Glass Requirement Tonnage</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>