force-app/main/default/objects/Account/fields/Total_of_Supplier_Shares__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Supplier_Shares__c</fullName>
    <label>Total of Supplier Shares</label>
    <summarizedField>Supplier_Share__c.Competitor_Units__c</summarizedField>
    <summaryForeignKey>Supplier_Share__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>