force-app/main/default/objects/Account/fields/Total_Purchase_Power__c.field-meta.xml
<CustomField>
    <fullName>Total_Purchase_Power__c</fullName>
    <description>Related to Supplier Share</description>
    <inlineHelpText>Related to Supplier Share</inlineHelpText>
    <label>Total Purchase Power</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>