force-app/main/default/objects/Account/fields/Total_Sales_History__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_History__c</fullName>
    <inlineHelpText>The life-time revenue from this account, a sum of revenue taken form all &apos;Actual Sales History&apos;s associated to this Account</inlineHelpText>
    <label>Total Sales History</label>
    <summarizedField>Actual_Sales_History__c.Revenue__c</summarizedField>
    <summaryForeignKey>Actual_Sales_History__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>