force-app/main/default/objects/Account/fields/Total_Tonnage_Available_to_Bid_On__c.field-meta.xml
<CustomField>
    <fullName>Total_Tonnage_Available_to_Bid_On__c</fullName>
    <formula>Total_Glass_Requirement_Tonnage__c - Total_Unsuitable_Tonnage__c - Total_Tonnage_Bid_For__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Tonnage Available to Bid On</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>