force-app/main/default/objects/Account/fields/Total_Tonnage_Open__c.field-meta.xml
<CustomField>
    <fullName>Total_Tonnage_Open__c</fullName>
    <label>Total Tonnage Open</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>