force-app/main/default/objects/Account/fields/Total_Units_Available_to_bid_on__c.field-meta.xml
<CustomField>
    <fullName>Total_Units_Available_to_bid_on__c</fullName>
    <formula>Total_Glass_Requirement_Units__c - Total_Unsuitable_Unit_Volumes__c - Total_Units_Bid_For__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Units Available to bid on (000&apos;s)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>