force-app/main/default/objects/Account/fields/Total_Units_Bid_For__c.field-meta.xml
<CustomField>
    <fullName>Total_Units_Bid_For__c</fullName>
    <label>Total Units Bid For (000&apos;s)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>