force-app/main/default/objects/Account/fields/Total_Unsuitable_Unit_Volumes__c.field-meta.xml
<CustomField>
    <fullName>Total_Unsuitable_Unit_Volumes__c</fullName>
    <label>Total Unsuitable Units (000&apos;s)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>