force-app/main/default/objects/Account/fields/Trading_As__c.field-meta.xml
<CustomField>
    <fullName>Trading_As__c</fullName>
    <inlineHelpText>Company trading name if different to Account Name.</inlineHelpText>
    <label>Trading As (if different)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>