force-app/main/default/objects/Account/fields/VIP_Link__c.field-meta.xml
<CustomField>
    <fullName>VIP_Link__c</fullName>
    <description>Link to the Vidrala VIP page</description>
    <label>VIP Link</label>
    <type>Url</type>
</CustomField>