force-app/main/default/objects/Account/recordTypes/Customers.recordType-meta.xml
<RecordType>
    <fullName>Customers</fullName>
    <active>true</active>
    <description>Past or Present</description>
    <label>Customers</label>
</RecordType>