force-app/main/default/objects/Account/recordTypes/Distributor.recordType-meta.xml
<RecordType>
    <fullName>Distributor</fullName>
    <active>true</active>
    <description>Distributors for Vidrala (Encirc &amp; Fifty)</description>
    <label>Distributor</label>
</RecordType>