force-app/main/default/objects/Account/recordTypes/Encirc_Beverages_Customers.recordType-meta.xml
<RecordType>
    <fullName>Encirc_Beverages_Customers</fullName>
    <active>true</active>
    <label>Encirc Beverages Customers</label>
</RecordType>