force-app/main/default/objects/Account/recordTypes/Encirc_Competitors.recordType-meta.xml
<RecordType>
    <fullName>Encirc_Competitors</fullName>
    <active>true</active>
    <description>Encirc competitors</description>
    <label>Encirc Competitors</label>
</RecordType>