force-app/main/default/objects/Account/recordTypes/Encirc_Investors_Owners.recordType-meta.xml
<RecordType>
    <fullName>Encirc_Investors_Owners</fullName>
    <active>true</active>
    <description>Encirc investors or members of parent company</description>
    <label>Encirc Investors &amp; Owners</label>
</RecordType>