force-app/main/default/objects/Account/recordTypes/Future_Customers.recordType-meta.xml
<RecordType>
    <fullName>Future_Customers</fullName>
    <active>true</active>
    <description>Future customers (Vidrala Spain)</description>
    <label>Future Customers</label>
</RecordType>