force-app/main/default/objects/Account/recordTypes/Haulier.recordType-meta.xml
<RecordType>
    <fullName>Haulier</fullName>
    <active>true</active>
    <description>The record type to be used for Haulier accounts.</description>
    <label>Haulier</label>
</RecordType>