force-app/main/default/objects/Account/recordTypes/Investors_Owners.recordType-meta.xml
<RecordType>
    <fullName>Investors_Owners</fullName>
    <active>true</active>
    <label>Investors &amp; Owners</label>
</RecordType>