force-app/main/default/objects/Account/recordTypes/OM_VID_Destinatario.recordType-meta.xml
<RecordType>
    <fullName>OM_VID_Destinatario</fullName>
    <active>true</active>
    <label>Ship to party</label>
</RecordType>