force-app/main/default/objects/Account/recordTypes/OM_VID_Grupo.recordType-meta.xml
<RecordType>
    <fullName>OM_VID_Grupo</fullName>
    <active>true</active>
    <label>Grupo</label>
</RecordType>